# RealRobot

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  build_and_publish.yml
docs/: compose.yaml  requirements.txt
docs/source/: conf.py  index.rst
docs/source/reference/: agents.rst  envs.rst  index.rst
docs/source/reference/sensors/: camera.rst  index.rst  simsense_depth.rst
docs/source/reference/utils/: camera.rst  common.rst  index.rst  logger.rst  realsense.rst  registration.rst
docs/source/reference/utils/lib3d/: index.rst  o3d_utils.rst
docs/source/reference/utils/multiprocessing/: index.rst  shared_object.rst  utils.rst
docs/source/reference/utils/visualization/: cv2_visualizer.rst  gripper_utils.rst  index.rst  o3d_gui_visualizer.rst  utils.rst  visualizer.rst
docs/source/reference/utils/wrappers/: index.rst  observation.rst
examples/: visualizer_demo.py
examples/data/20230822_164823_cse_pink_mug_front/: K.npy  T_world_cam.npy  depth_frame.npy  mask.npy  pred_grasps_contact_pts.npy  pred_grasps_q_vals.npy  pred_grasps_scores.npy  pred_grasps_world.npy  rgb_frame.npy
notebooks/: Capture_obs.ipynb  Debug_xarm_action.ipynb  Extract_rosbag_pointcloud.ipynb  Rosbag_to_frames.ipynb  SAM_image_features.ipynb  Test_env_control.ipynb  Test_gsam_cgn_grasping.ipynb  Test_gsam_mask.ipynb  Test_real_bg_in_sim.ipynb  Test_real_env.ipynb  Test_real_env_align.ipynb  Test_real_env_render.ipynb  Test_robot_control.ipynb  Test_robot_control.py  Test_xarm_state_rl_ckpt.ipynb  Track_realsense_frames.ipynb  Track_rosbag_frames.ipynb
notebooks/test_realsense/: Realsense_capture.ipynb  Test_simsense_activezero2.ipynb  Test_simsense_activezero2_with_gt_gripper_overlay.py
real_robot/: __init__.py
real_robot/agents/: __init__.py  xarm.py
real_robot/assets/descriptions/: xarm7.srdf  xarm7.urdf  xarm7_d435.urdf  xarm7_d435_orig.urdf  xarm7_orig.srdf  xarm7_pris_finger.urdf  xarm7_pris_finger_d435.urdf  xarm_floating_pris_finger.urdf  xarm_floating_pris_finger_d435.urdf
real_robot/assets/hec_camera_poses/: Tb_b2c_20230918_CSE4144_front_jiacheng.npy
real_robot/envs/: __init__.py  base_env.py  grasp_anything.py  place_cube_in_bowl.py
real_robot/sensors/: camera.py  simsense_depth.py
real_robot/tools/: convert_rosbag_to_frames.py  enumerate_rs_devices.py  rs_capture.py  write_video_from_extracted_npz.py
real_robot/utils/: camera.py  common.py  logger.py  realsense.py  registration.py
real_robot/utils/lib3d/: o3d_utils.py
real_robot/utils/multiprocessing/: __init__.py  shared_object.py  utils.py
real_robot/utils/visualization/: __init__.py  cv2_visualizer.py  gripper_utils.py  o3d_gui_visualizer.py  utils.py  visualizer.py
real_robot/utils/wrappers/: observation.py
tests/: test_camera.py
tests/multiprocessing/: benchmark_shared_object.py  test_shared_object.py
tests/multiprocessing/benchmark/: benchmark_shared_array.py  benchmark_shared_object.py  benchmark_shared_object_result_v0.0.2.npz  benchmark_shared_object_result_v0.0.3.npz  benchmark_shared_object_result_v0.0.4.npz  benchmark_shared_object_result_v0.0.5.npz  benchmark_shared_object_result_v0.0.6.npz
tools/: convert_rosbag_to_frames.py  write_video_from_extracted_npz.py
